# hoss

./: CMakeLists.txt  HACKING.markdown  README.markdown
docs/: CMakeLists.txt  builderd.rst  cd.rst  cicd.rst  conf.py  development.rst  index.rst  introduction.rst  schedulerd-configuration.rst  schedulerd.rst
share/: schedulerd.yml
share/builds/: hoss.yml  libgit2.yml
share/defs/: libgit2.yml
src/: CMakeLists.txt  core.hpp  msg1.hpp
src/builder/: Builder.cpp  Builder.hpp  CMakeLists.txt  hoss-builderd.cpp
src/cli/: CMakeLists.txt  hoss.cpp  io.cpp  io.hpp
src/core/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Doc.cpp  Doc.hpp  DocCollection.hpp  DocCollectionResult.cpp  DocCollectionResult.hpp  DocStore.hpp  GitSource.cpp  GitSource.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpRequestError.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpRoute.cpp  HttpRoute.hpp  HttpServer.cpp  HttpServer.hpp  InMemoryDocCollection.cpp  InMemoryDocCollection.hpp  InMemoryDocStore.cpp  InMemoryDocStore.hpp  Log.cpp  Log.hpp  Message.cpp  Message.hpp  MessageProcessor.cpp  MessageProcessor.hpp  Socket.cpp  Socket.hpp  Source.hpp  Uuid.cpp  Uuid.hpp  Yaml.cpp  Yaml.hpp  constants.hpp  junk.cpp  junk.hpp  (+2 more)
src/msg-1/: CMakeLists.txt  Cpu.proto  Heartbeat.proto  Memory.proto  ResourceAmount.proto
src/msg1/: CMakeLists.txt  Cpu.proto  Heartbeat.proto  Job.proto  Memory.proto  ResourceAmount.proto  ScheduleRequest.proto  ScheduleResult.proto
src/scheduler/: BuilderSession.cpp  BuilderSession.hpp  BuilderWrapper.hpp  CMakeLists.txt  HttpApi1.cpp  HttpApi1.hpp  JobDefinition.cpp  JobDefinition.hpp  Parser.cpp  Parser.hpp  Scheduler.cpp  Scheduler.hpp  SchedulerConfiguration.cpp  SchedulerConfiguration.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  hoss-schedulerd.cpp
test/: CMakeLists.txt  shim.hpp
test/core/: CMakeLists.txt  DocTest.cpp  HttpRouteTest.cpp  HttpServerTest.cpp  InMemoryDocCollectionTest.cpp  InMemoryDocStoreTest.cpp  MessageProcessorTest.cpp  MessageTest.cpp
test/scheduler/: CMakeLists.txt  SessionTest.cpp
